попытка 2 MyQueue, MyStack