@@ -4,21 +4,19 @@ public class MyQueue<T> {
     private MyLinkedList<T> list = new MyLinkedList<>();
 
     public void enqueue(T element) {
-        list.add(element);
+        list.addLast(element);
     }
 
     public T dequeue() {
-        if (list.isEmpty()) throw new RuntimeException("Queue is empty");
         return list.remove(0);
     }
 
     public T peek() {
-        if (list.isEmpty()) throw new RuntimeException("Queue is empty");
-        return list.get(0);
+        return list.getFirst();
     }
 
     public boolean isEmpty() {
-        return list.isEmpty();
+        return list.size() == 0;
     }
 
     public int size() {
